force-app/main/default/objects/Potential_Adverse_Event__c/Potential_Adverse_Event__c.object-meta.xml
<CustomObject>
    <description>Track potential adverse events related to products.</description>
    <label>Potential Adverse Event</label>
    <nameField>
        <displayFormat>PAE-{000000}</displayFormat>
        <label>Potential Adverse Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Adverse Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>