force-app/main/default/objects/Potential_Adverse_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Potential Adverse Events</relationshipLabel>
    <relationshipName>Potential_Adverse_Events</relationshipName>
    <type>Lookup</type>
</CustomField>