force-app/main/default/objects/Potential_Adverse_Event__c/fields/Adverse_Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Event_Description__c</fullName>
    <description>Summary description of adverse events.</description>
    <label>Summary Description of Adverse Events</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>