force-app/main/default/objects/Potential_Adverse_Event__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Email address of the customer.</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>