force-app/main/default/objects/Potential_Adverse_Event__c/fields/Date_Product_Used__c.field-meta.xml
<CustomField>
    <fullName>Date_Product_Used__c</fullName>
    <description>Date when the product was used.</description>
    <label>Date product was used</label>
    <type>Date</type>
</CustomField>