force-app/main/default/objects/Potential_Adverse_Event__c/fields/Other_Species_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Species_Description__c</fullName>
    <description>Description if Other is selected for Species Affected.</description>
    <label>Other Species Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>