force-app/main/default/objects/Potential_Adverse_Event__c/fields/Product_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Lot_Number__c</fullName>
    <description>Lot number of the product.</description>
    <label>Product Lot #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>