force-app/main/default/objects/Potential_Adverse_Event__c/fields/Product_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Product_Manufacturer__c</fullName>
    <description>Manufacturer of the product.</description>
    <label>Product Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>