force-app/main/default/objects/Potential_Adverse_Event__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Name of the product involved.</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>