force-app/main/default/objects/Potential_Adverse_Event__c/fields/Reporting_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Name__c</fullName>
    <description>Name of the reporting party or customer.</description>
    <label>Reporting Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>