force-app/main/default/objects/Potential_Adverse_Event__c/fields/Reporting_Party_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Phone__c</fullName>
    <description>Phone number of the reporting party or customer.</description>
    <label>Reporting Party Phone</label>
    <type>Phone</type>
</CustomField>