force-app/main/default/objects/Potential_Adverse_Event__c/fields/Species_Affected__c.field-meta.xml
<CustomField>
    <fullName>Species_Affected__c</fullName>
    <description>Species affected by the adverse event.</description>
    <label>Species Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canine</fullName>
            </value>
            <value>
                <fullName>Equine</fullName>
            </value>
            <value>
                <fullName>Swine</fullName>
            </value>
            <value>
                <fullName>Avian</fullName>
            </value>
            <value>
                <fullName>Feline</fullName>
            </value>
            <value>
                <fullName>Bovine</fullName>
            </value>
            <value>
                <fullName>Poultry</fullName>
            </value>
            <value>
                <fullName>Reptilian</fullName>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>